# makeyourcv_backend

./: .env.example  .env.test  .gitignore  Justfile  Makefile  README.md  check_db.py  docker-compose.test.yml  generate_configs.py  generate_resume_direct.py  gunicorn.conf.py  job_description.txt  main.py  models.py  pyproject.toml  reproduce_issue.py  run_agent.sh  run_server.sh  settings.py  simple_resume_gen.py  startup.sh  test_all_tools.py  test_mcp.py
adk/: agent.py  mcp_config.py  memory.py  routes.py  schema.YAML  schemas.py  state.py  utils.py
agent/: factory.py  main.py  server.py
backend/: .env.test  db.py  mcp_server.py  models.py  pyproject.toml
dependencies/: certification_operations.py  custom_section_operations.py  education_operations.py  experience_operations.py  input_skills.py  personal_info_operations.py  project_operations.py  publication_operations.py  skill_operations.py  summary_operations.py  technical_skill_operations.py  user_operations.py
deploying/: resume-builder-api-fastapi.servise.j2
docs/: ADK_HANDOFF.md  project_status.md
docs/adk/: mcp.md  (+7 more)
migrations/: env.py
routes/: certification_routes.py  custom_section_routes.py  education_routes.py  experience_routes.py  input_skills.py  personal_info_routes.py  publication_routes.py  skill_routes.py  summary_routes.py  technical_skill_routes.py
schemas/: certification_schemas.py  custom_section_schemas.py  education_schemas.py  experience_schemas.py  input_skills.py  personal_info_schemas.py  publication_schemas.py  skill_schemas.py  summary_schemas.py  technical_skill_schemas.py
(+97 files in other folders)
